# hrel

./: .gitignore  .stylish-haskell.yaml  .travis.yml  Dockerfile  build.sh  cabal.project  database-schema.sql  devserver.sh  hrel-apps.cabal  hrel-haskell.cabal  hrel-jobs.cabal  hrel-server.cabal  hrel.cabal  package.json  stack.yaml  test.js  webpack.config.js
assets/: build-client-side.sh  build-client.js  build.sh  dev-server.js  development-server.js  hrel-scanner.service  hrel-webserver.service  install-peer-deps.sh  nginx.conf  reset-database.js  reset-database.sh  scan.service  scan.timer  schema.sql  style.css  web.service
assets/database/: feeds-schema.sql  migration-1.sql  schema.sql
assets/kubernetes/: scanner.yaml  web-server.yaml
assets/migrations/: 1-add-source.sql  2-links-uri-text.sql
assets/nginx/: hrel.conf
assets/stylesheet/: index.scss
assets/systemd/: hrel-scanner.service  hrel-scanner.timer  hrel-webserver.service
client/: Dockerfile  nginx.conf  package.json  webpack.config.js
client/source/: index.jsx  index.scss  utilities.jsx
client/source/components/: feed.jsx  index.jsx
client/src/: index.scss
client/static/: index.html
ext/: style.css
from-apps/assets/: style.css
from-apps/src/: QueueAll.hs
lib/Control/Monad/Trans/Resource/: Orphan.hs
lib/Data/Markup/: Node.hs  RSS.hs
lib/HRel/: Aggregators.hs  Config.hs  Data.hs  Database.hs  Feeds.hs  HTTP.hs  JobControl.hs  Markup.hs  Markup2.hs  Models.hs  Monad.hs  Names.hs  Network.hs  Network2.hs  NodeFilter.hs  NodeFilter2.hs  Parser.hs  Parser2.hs  Processing.hs  Release.hs  Sources.hs  Sources2.hs  Templates.hs  Tools.hs  TorrentAPI.hs  TorrentApi.hs  Torrents.hs  Units.hs  XML.hs
lib/HRel/Aggregators/: DDLValleyRocks.hs  OneClickWatch.hs
lib/HRel/Application/: FeedProcessor.hs  Hub.hs  Test.hs
lib/HRel/Control/: Exception.hs
lib/HRel/Control/Monad/: Exception.hs
lib/HRel/Data/: Feed.hs  Release.hs  Scanner.hs  Torrent.hs  XML.hs
lib/HRel/Data/Type/: List.hs
lib/HRel/Data/XML/: Lexer.hs  Parser.hs
lib/HRel/Database/: Marshal.hs  Query.hs  Types.hs  Value.hs
lib/HRel/Database/SQL/: Builder.hs  Columns.hs  Expression.hs  Select.hs  Statement.hs  Types.hs
lib/HRel/Favs/: XRel.hs
lib/HRel/Network/: Service.hs  ZMQ.hs
lib/HRel/Parser/: XML.hs
lib/HRel/Source/: AtomFeed.hs  Feeds.hs  KickAssTorrents.hs  RSSFeed.hs
lib/HRel/Sources/: KickAssTorrents.hs  Markup.hs  ReleaseFeeds.hs  ReleaseName.hs  TorrentInfo.hs
lib/HRel/Web/: Server.hs  Templates.hs
nginx/: Dockerfile
server/: config.js  database.js  dumps.js  feeds.js  http.js  links.js  releases.js  scanner.js  server.js  utilities.js
server/sources/: feeds.js  kat.js  movieblog.js  rarbg.js  thepiratebay.js
src/: Aggregator.hs  Config.hs  Database.hs  FetchFavs.hs  HRel.hs  Jobs.hs  Main.hs  QueueAll.hs  ScanSources.hs  Scanner.hs  Search.hs  Server.hs  Test.hs  Web.hs  WebServer.hs  index.html  index.jsx  index.scss
src/HRel/: Conduit.hs  Database.hs  Download.hs  Fetch.hs  Markup.hs  Network.hs  Release.hs  Source.hs  Tools.hs  Torrent.hs  URI.hs  Units.hs  XML.hs
src/HRel/Aggregator/: DDLValleyRocks.hs
src/HRel/Application/: FeedProcessor.hs  Hub.hs
src/HRel/Control/: Exception.hs
src/HRel/Control/Effect/: Environment.hs
src/HRel/Data/: Parser.hs  Product.hs  Scanner.hs  Traversal.hs  XML.hs
src/HRel/Data/Type/: Fold.hs
src/HRel/Data/XML/: Lexer.hs  Parser.hs
src/HRel/Database/: Marshal.hs  Query.hs
src/HRel/Database/SQL/: Builder.hs  Columns.hs  Expression.hs  Statement.hs  Types.hs
src/HRel/Markup/: Download.hs  Node.hs  RSS.hs
src/HRel/Network/: Service.hs  Types.hs  ZMQ.hs
src/HRel/Source/: DDLValley.hs  Feeds.hs  KickAss.hs  KickAssTorrents.hs  OneClickWatch.hs  XRel.hs
src/HRel/XML/: Ranges.hs
src/Main/: Fetch.hs  FetchDumps.hs  Find.hs  HRel.hs  XRel.hs
src/Main/HRel/: Database.hs
static/: style.css
test/: Spec.hs
test/HRel/Control/Effect/: EnvironmentSpec.hs
test/HRel/Database/SQL/: SelectSpec.hs  StatementSpec.hs
