name:                hrel-apps
version:             0.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable hrel-jobs
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -j -Wall -fprof-auto -threaded -rtsopts -with-rtsopts=-N
                       -fno-warn-unused-do-bind -fno-warn-tabs
  default-language:    Haskell2010
  build-depends:       base,
                       hrel,
                       mysql,
                       mysql-simple,
                       mtl,
                       http-client,
                       http-client-tls,
                       conduit,
                       exceptions
