name:                hrel-apps
version:             0.0.1
build-type:          Simple
cabal-version:       >= 1.10

library
  hs-source-dirs:      lib
  ghc-options:         -O2 -j -Wall -fprof-auto -fno-warn-unused-do-bind -fno-warn-tabs
  default-language:    Haskell2010
  build-depends:       base,
                       hrel,
                       mysql,
                       mysql-simple,
                       mtl,
                       http-client,
                       http-client-tls,
                       conduit,
                       exceptions
  exposed-modules:     HRel.Database,
                       HRel.Processing

executable hrel-jobs
  hs-source-dirs:      src
  main-is:             Jobs.hs
  ghc-options:         -O2 -j -Wall -fprof-auto -threaded -rtsopts -with-rtsopts=-N
                       -fno-warn-unused-do-bind -fno-warn-tabs
  default-language:    Haskell2010
  build-depends:       base,
                       hrel,
                       hrel-apps,
                       mtl,
                       http-client,
                       http-client-tls,
                       conduit,
                       exceptions

executable hrel-web
  hs-source-dirs:      src
  main-is:             Web.hs
  ghc-options:         -O2 -j -Wall -fprof-auto -threaded -rtsopts -with-rtsopts=-N
                       -fno-warn-unused-do-bind -fno-warn-tabs
  default-language:    Haskell2010
  build-depends:       base,
                       hrel,
                       hrel-apps,
                       scotty,
                       text,
                       mtl,
                       lucid,
                       network-uri,
                       http-client,
                       http-client-tls,
                       conduit
