name:                hrel-haskell
version:             0.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -Wall -fno-warn-tabs -fno-warn-name-shadowing
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, pg-store, bytestring, text, tagsoup, mtl, transformers,
                       http-client, http-client-tls, http-types, attoparsec
  hs-source-dirs:      lib
  exposed-modules:     HRel.Models
                       HRel.Markup
                       HRel.NodeFilter
                       HRel.Network
                       HRel.Feeds
                       HRel.Sources
                       HRel.Names

executable hrel-haskell-exe
  ghc-options:         -Wall -fno-warn-tabs -Wno-unused-do-bind
  default-language:    Haskell2010
  build-depends:       base, hrel-haskell, bytestring, http-client, http-client-tls, transformers,
                       mtl, pg-store, postgresql-libpq
  hs-source-dirs:      src
  main-is:             Main.hs

executable hrel-haskell-scan-sources
  ghc-options:         -Wall -fno-warn-tabs -Wno-unused-do-bind -threaded -with-rtsopts -N
  default-language:    Haskell2010
  build-depends:       base, hrel-haskell, bytestring, http-client, http-client-tls, transformers,
                       mtl, pg-store, postgresql-libpq, text
  hs-source-dirs:      src
  main-is:             ScanSources.hs
