name:                hrel-server
version:             0.0.0
build-type:          Simple
cabal-version:       >= 1.10

library
  ghc-options:         -Wall -fno-warn-tabs -fno-warn-name-shadowing -Wno-unused-do-bind
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, pg-store, bytestring, text, mtl, transformers,
                       http-client, http-client-tls, http-types, attoparsec, containers, conduit,
                       resourcet, http-types, conduit-extra, exceptions
  hs-source-dirs:      lib
  exposed-modules:     HRel.Torrents
                       HRel.Markup2
                       HRel.NodeFilter2
                       HRel.Network2
                       HRel.Sources2
                       HRel.Names
                       HRel.XML

executable hrel-webserver
  ghc-options:         -Wall -fno-warn-tabs -Wno-unused-do-bind -Wno-name-shadowing
  default-language:    Haskell2010
  build-depends:       base, hrel-server, happstack-server, pg-store, postgresql-libpq, aeson, mtl,
                       text, bytestring
  hs-source-dirs:      src
  main-is:             WebServer.hs

executable hrel-scanner
  ghc-options:         -Wall -fno-warn-tabs -Wno-unused-do-bind
  default-language:    Haskell2010
  build-depends:       base, hrel-server, http-client, http-client-tls, transformers,
                       pg-store, postgresql-libpq, conduit, resourcet
  hs-source-dirs:      src
  main-is:             Scanner.hs

executable hrel-test
  ghc-options:         -Wall -fno-warn-tabs -Wno-unused-do-bind
  default-language:    Haskell2010
  build-depends:       base, hrel-server, bytestring, text, mtl, http-client, http-client-tls,
                       pg-store, postgresql-libpq, attoparsec, conduit, conduit-extra, resourcet,
                       containers, http-types
  hs-source-dirs:      src
  main-is:             Test.hs
