name:          hrel
version:       3.0.0
build-type:    Simple
cabal-version: >= 2.0

executable hrel
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 8)
    ghc-options:    -Wno-name-shadowing
  else
    ghc-options:    -fno-warn-name-shadowing

  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends:    base,
                    ghc-prim,
                    mtl,
                    http-conduit,
                    http-client,
                    http-client-tls,
                    http-types,
                    bytestring,
                    text,
                    attoparsec,
                    conduit,
                    resourcet,
                    exceptions,
                    aeson,
                    postgresql-libpq,
                    containers,
                    profunctors,
                    tagged,
                    contravariant,
                    optparse-applicative,
                    zeromq4-haskell,
                    binary,
                    resourcet

  other-modules:    HRel.Network
                    HRel.Network.ZMQ
                    HRel.Network.Types
                    HRel.Data.Scanner
                    HRel.Data.XML
                    HRel.Data.XML.Lexer
                    HRel.Data.XML.Parser
                    HRel.Database
                    HRel.Database.Types
                    HRel.Database.Marshal
                    HRel.Database.Query
                    HRel.Database.SQL.Types
                    HRel.Database.SQL.Expression
                    HRel.Application.Hub
                    HRel.Application.FeedProcessor
