name:          hrel
version:       3.0.0
build-type:    Simple
cabal-version: >= 2.0

executable hrel
  default-language: Haskell2010
  ghc-options:      -Wall

  if impl(ghc >= 8)
    ghc-options:    -Wno-name-shadowing
  else
    ghc-options:    -fno-warn-name-shadowing

  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends:    base,
                    ghc-prim,
                    mtl,
                    http-conduit,
                    http-client,
                    http-client-tls,
                    http-types,
                    bytestring,
                    text,
                    vector,
                    attoparsec,
                    conduit,
                    resourcet,
                    exceptions,
                    postgresql-libpq,
                    containers,
                    profunctors,
                    tagged,
                    contravariant,
                    optparse-applicative,
                    zeromq4-haskell,
                    binary,
                    resourcet,
                    base64-bytestring,
                    postgresql-simple,
                    scientific,
                    mmorph

  other-modules:    HRel.Network
                    HRel.Network.ZMQ
                    HRel.Network.Service
                    HRel.Control.Exception
                    HRel.Control.Effect.Environment
                    HRel.Data.Scanner
                    HRel.Data.XML
                    HRel.Data.XML.Lexer
                    HRel.Data.XML.Parser
                    HRel.Data.Product
                    HRel.Data.Type.Fold
                    HRel.Database
                    HRel.Database.Types
                    HRel.Database.Marshal
                    HRel.Database.Query
                    HRel.Database.SQL.Types
                    HRel.Database.SQL.Builder
                    HRel.Database.SQL.Columns
                    HRel.Database.SQL.Expression
                    HRel.Database.SQL.Statement
                    HRel.Application.Hub
                    HRel.Application.FeedProcessor

test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010

  ghc-options:      -Wall

  if impl(ghc >= 8)
    ghc-options:    -Wno-name-shadowing
  else
    ghc-options:    -fno-warn-name-shadowing

  hs-source-dirs:   test src
  main-is:          Spec.hs

  build-depends:    base, hspec, QuickCheck, mtl, postgresql-simple, mmorph

  other-modules:    HRel.Control.Effect.Environment
                    HRel.Control.Effect.EnvironmentSpec
                    HRel.Database.SQL.StatementSpec
